--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,6 +42,11 @@ p {
   letter-spacing: .02rem;
   padding-bottom: 10px
 }
+p.width-80 {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
 /*
 .caption h4 {
   font-size: 120%;
@@ -102,6 +107,10 @@ p {
 }
 .clearfix {
   clear: both;
+}
+.description {
+  font-size: 16px;
+  line-height: 180%;
 }
 .section-heading {
   border-bottom: 1px dotted #ccc;
@@ -451,7 +460,7 @@ p {
   font-weight: 800;
   font-size: 30px
 }
-.col-sm-6.landing-nav-btn {
+.col-sm-6.landing-nav-btn, .col-sm-4.landing-nav-btn {
   padding: 0;
 }
 .landing-nav .landing-nav-btn a {
@@ -469,18 +478,29 @@ p {
   transition-duration: 0.4s;
   transition-timing-function: ease-out;
 }
-.wb-automated h1 {
+.landing .header h1 {
   font-weight: 300;
   text-transform: uppercase;
   font-size: 60px;
   font-size: 5vw;
+}
+.header.wb-automated h1 {
   text-align: right;
 }
-.wb-rotary h1 {
+.header.wb-rotary h1 {
   font-weight: 300;
   text-transform: uppercase;
   font-size: 60px;
   font-size: 5vw;
+}
+.header.spincat {
+  text-align: center;
+}
+.header.spincat h1, .header.spincat h3 {
+  margin: 0;
+}
+.header.spincat .heading {
+  padding: 10px;
 }
 .list-group-item.header, .list-group-item.header:active, .list-group-item.header:hover {
   font-family: 'Roboto Slab', 'Lato', sans-serif;
@@ -522,21 +542,27 @@ a.list-group-item {
   color: #949494;
 }
 .product-social .dropdown-menu {
-    min-width: 20px;
-    padding: 2px 6px;
-    margin: 0;
-    font-size: 12px;
-    background-color: #fff;
-    -webkit-background-clip: none;
-    background-clip: none;
-    border: none;
-    border: none;
-    border-radius: 0;
-    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
-    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+  min-width: 20px;
+  padding: 2px 6px;
+  margin: 0;
+  font-size: 12px;
+  background-color: #fff;
+  -webkit-background-clip: none;
+  background-clip: none;
+  border: none;
+  border: none;
+  border-radius: 0;
+  -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+  box-shadow: 0 6px 12px rgba(0,0,0,.175);
 }
 .product-social .dropdown-menu>li>a {
-    padding: 0;
+  padding: 0;
+  color: #949494;
+}
+.product-social .dropdown-menu>li>a:hover {
+  color: #262626;
+  text-decoration: none;
+  background: none;
 }
 .product .panel-group .panel {
   border-radius: 0;
@@ -919,6 +945,6 @@ footer .footer-logo {
 .copyright a:hover {
   color: #888;
 }
-.copyright a .glyphicon {
+.copyright a>i {
   color: #81674b;
 }
