--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,8 +42,8 @@ p {
   letter-spacing: .02rem;
   padding-bottom: 10px
 }
-p.width-80 {
-  width: 80%;
+p.width-90 {
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -493,15 +493,6 @@ p.width-80 {
   font-size: 60px;
   font-size: 5vw;
 }
-.header.spincat {
-  text-align: center;
-}
-.header.spincat h1, .header.spincat h3 {
-  margin: 0;
-}
-.header.spincat .heading {
-  padding: 10px;
-}
 .list-group-item.header, .list-group-item.header:active, .list-group-item.header:hover {
   font-family: 'Roboto Slab', 'Lato', sans-serif;
   background-color: #565656;
@@ -514,6 +505,35 @@ a.list-group-item {
 .product-list .list-group-item .label {
   float: right;
   border-radius: 0;
+}
+.spincat {
+  text-align: center;
+}
+.spincat h1, .spincat h3 {
+  margin: 0;
+}
+.spincat .heading {
+  padding: 10px;
+  border-top: 3px solid #fff;
+}
+.spincat .product-list {
+  text-align: center;
+}
+.spincat .product-list img {
+  margin-left: auto;
+  margin-right: auto;
+}
+.spincat .product-list img.sc-168 {
+  padding: 5px 20px 25px 20px;
+}
+.spincat .product-list img.sc-212 {
+  padding: 5px 15px 21px 15px;
+}
+.spincat .product-list img.sc-250 {
+  padding: 5px 8px 23px 8px;
+}
+.spincat .product-list img.sc-287 {
+  padding-bottom: 14px;
 }
 
 /* Product Pages */
