--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -509,7 +509,7 @@ a.list-group-item {
 .spincat {
   text-align: center;
 }
-.spincat .heading-img.img {
+.spincat .heading-img img {
   width: 100%;
 }
 .spincat h1, .spincat h3 {
