--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,9 +155,6 @@ p.width-90 {
 .carousel-control.left, .carousel-control.right {
   background: none;
 }
-.carousel .item>img {
-  min-width: 100%;
-}
 .to-top {
   text-align: right;
   font-size: 11px;
@@ -297,13 +294,42 @@ p.width-90 {
 }
 
 /* Home Page */
-.carousel-caption h2 {
+.home-slider .carousel-indicators {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    z-index: 15;
+    width: 60%;
+    padding-left: 0;
+    margin-left: -30%;
+    text-align: center;
+    list-style: none;
+}
+.home-slider .carousel-indicators li {
+  display: block;
+  margin: 12px;
+  text-indent: 15px;
+}
+.home-slider .carousel-indicators .active {
+  width: 10px;
+  height: 10px;
+}
+.home-slider .carousel-indicators li span {
+  position: relative;
+  display: block;
+  top: -5px;
+  color: #fff;
+}
+.home-slider .carousel .item>img {
+  min-width: 100%;
+}
+.home-slider .carousel-caption h2 {
   font-size: 320%;
   font-weight: 800;
   letter-spacing: .05rem;
-  text-transform: uppercase
+  text-transform: uppercase;
 }
-.carousel-caption h4 {
+.home-slider .carousel-caption h4 {
   font-size: 180%;
   font-weight: 300;
   letter-spacing: .1rem;
