--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -515,11 +515,15 @@ p.width-90 {
   font-weight: 300;
   text-transform: uppercase;
   font-size: 60px;
-  font-size: 4vw;
+  font-size: 5vw;
 }
 .header.wb-automated h1 {
   text-align: right;
   padding-right: 30px;
+  font-size: 48px;
+}
+.wb-automated .carousel-indicators {
+  bottom: 0;
 }
 .list-group-item.header, .list-group-item.header:active, .list-group-item.header:hover {
   font-family: 'Roboto Slab', 'Lato', sans-serif;
