--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -534,6 +534,9 @@ p.width-90 {
 a.list-group-item {
   color: #444;
 }
+a.list-group-item:hover {
+  background-color: #f2f2f2;
+}
 .product-list .list-group-item .label {
   float: right;
   border-radius: 0;
