--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -12,7 +12,16 @@
     max-width: 200px;
   }
 }
-
+@media screen and (max-width: 848px) {
+  .home-slider .carousel-indicators li:first-child {
+    margin-top: 35%;
+  }
+  .home-slider .carousel-indicators li {
+    font-size: 80%;
+    margin-top: 12px;
+    margin-bottom: 12px;
+  }
+}
 @media screen and (max-width: 768px) {
   .col-sm-4, .col-sm-3, .navbar .utilities .utils {
     text-align: center;
@@ -104,5 +113,8 @@
   }
   .contact .first .dealer {
     border-top: 1px dotted #eee;
+  }
+  .indicator-panel {
+    display: none;
   }
 }
