finish wb pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -547,10 +547,10 @@ p.width-90 {
   font-size: 60px;
   font-size: 5vw;
 }
-.wb-automated .section-header.header {
+.landing .section-header.header {
   padding: 15px 0;
 }
-.wb-automated .header h1 {
+.landing .header h1 {
   text-align: center;
   margin: 0;
   font-size: 4vw;
