--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -297,94 +297,59 @@ p.width-90 {
 .home-slider {
   max-height: 450px;
   overflow: hidden;
-}
-.home-slider .indicator-panel h3 {
-  margin: 5% 2% 5% 10%;
-  color: #fff;
-  font-weight: 600;
   text-align: left;
 }
 .home-slider .indicator-panel {
   position: absolute;
-  top: 0;
+  bottom : 20px;
   left: 0;
   z-index: 15;
-  width: 380px;
-  height: 100%;
-  padding-left: 0;
-  margin-left: 0;
-  text-align: center;
+  width: 68%;
+  height: 90px;
   list-style: none;
-  background-color: rgba(0,0,0,.4);
+  background-color: rgba(255,255,255,.8);
+}
+.home-slider .indicator-panel h3 {
+  color: #484848;
+  font-weight: 600;
+  margin-left: 3%;
+  margin-top: 15px;
+}
+.home-slider .indicator-panel input.btn {
+  position: absolute;
+  top: 0;
+  right: -90px;
+  height: 100%;
+  width: 90px
 }
 .home-slider .carousel-indicators {
   position: absolute;
-  top: 0;
+  top: 48px;
   left: 0;
   z-index: 15;
-  height: 100%;
-  padding-left: 0;
-  margin-left: 0;
-  text-align: center;
-  list-style: none;
+  width: 100%;
+  margin-left: 3%;
   font-size: 12px;
   letter-spacing: .1rem;
+  text-align: left;
+  display: inline-block;
 }
-.home-slider .carousel-indicators li {
-  display: block;
-  margin: 14px;
-  margin-left: 33%;
-  text-indent: 15px;
-  
-}
-.home-slider .carousel-indicators li:first-child {
-  margin-top: 25%;
+.home-slider .carousel-indicators a {
+  color: #585858;
+  padding: 6px 8px;
+  border: 1px solid #adadad;
+  line-height: 30px;
 }
 .home-slider .carousel-indicators .active {
-  width: 10px;
-  height: 10px;
-}
-.home-slider .carousel-indicators li span {
-  position: relative;
-  display: block;
-  top: -5px;
-  color: #fff;
-  display: block;
-  width: 300px;
-  text-align: left;
-}
-.home-slider .carousel-indicators li.search-input {
-  border: none;
+  background-color: #fff;
+  border: 1px solid #adadad;
+  padding: 6px 8px;
 }
 .home-slider .carousel .item>img, .product-testimonials .carousel .item>img {
   min-width: 100%;
 }
-.home-slider .carousel-caption h2 {
-  font-size: 320%;
-  font-weight: 800;
-  letter-spacing: .05rem;
-  text-transform: uppercase;
-}
-.home-slider .carousel-caption h4 {
-  font-size: 180%;
-  font-weight: 300;
-  letter-spacing: .1rem;
-}
-.home-search {
-  background: #e8e8e8 url("../img/concrete_seamless.png") repeat;
-  color: #585858;
-  border-top: 1px solid #ccc;
-  border-bottom: 9px solid #f6f6f6;
-  padding: 5px 0 20px 0;
-}
-.home-search .input-group {
-  padding: 10px 20%;
-}
-.home-search h3 {
-  font-weight: 600;
-  letter-spacing: .05rem;
-  margin-bottom: 0;
-  text-transform: uppercase;
+.home-about {
+  border-top: 9px solid #f6f6f6;
 }
 .home-about h2 {
   font-size: 24px;
