home slider positioning

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -4,6 +4,11 @@
     top: 32rem;
   }
 }
+@media screen and (max-width: 1202px) {
+  .home-slider .indicator-panel {
+    height: 120px;
+  }
+}
 @media screen and (max-width: 1200px) {
   .product-thumbnails a.btn {
     top:48px;
@@ -15,6 +20,9 @@
   }
   body.home .col-md-3 img, body.home .col-md-2 img {
     max-width: 200px;
+  }
+  .home-slider .indicator-panel {
+    top: 50%;
   }
 }
 @media screen and (max-width: 768px) {
@@ -42,14 +50,9 @@
   .padding-left-60, .padding-left-120 {
     padding-left: 15px;
   }
-  .carousel-caption h2 {
-    font-size: 200%;
-  }
-  .carousel-caption h4 {
-    font-size: 100%;
-  }
-  .home-search h3 {
-    font-size:120%;
+  .home-slider .indicator-panel {
+    top: 40%;
+    width: 80%;
   }
   .home-about, .home-features {
     text-align: center;
@@ -63,6 +66,7 @@
   #wordCarousel .item p.attrib {
   font-size: 90%;
   }
+  /* Landing pages */
   .landing-nav .landing-nav-btn.automated {
   border-bottom: 3px solid #fff;
   border-right: 0;
@@ -86,8 +90,15 @@
     font-size: 10px;
   }
 }
-  
+
+@media screen and (max-width: 605px) {
+  .indicator-panel {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 480px) {
+/*
   .carousel-caption h2 {
     font-size: 120%;
   }
@@ -96,6 +107,10 @@
   }
   .home-search h3 {
     font-size:100%;
+  }
+*/
+  .utilities .col-sm-4 {
+    display: none
   }
   .btn.contact {
     font-size: 3.6vw;
@@ -108,8 +123,5 @@
   }
   .contact .first .dealer {
     border-top: 1px dotted #eee;
-  }
-  .indicator-panel {
-    display: none;
   }
 }
