--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,6 +81,10 @@ p.width-90 {
 .padding-right-30 {
   padding-right: 30px;
 }
+.padding-tb-60 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
 .padding-right-60 {
   padding-right: 60px;
 }
@@ -952,6 +956,13 @@ a.list-group-item:hover {
   margin-right: 20px;
   position: relative;
   top: -10px;
+}
+h1.page-heading {
+  font-size: 30px;
+  text-transform: uppercase;
+  font-weight: 300;
+  margin-bottom: 15px;
+  letter-spacing: .1rem
 }
 
 /* Footers */
