--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -69,18 +69,19 @@
     display: none;
   }
   #wordCarousel .item p {
-  font-size: 100%;
+    font-size: 100%;
   }
   #wordCarousel .item p.attrib {
-  font-size: 90%;
+    font-size: 90%;
   }
   /* Landing pages */
   .landing-nav .landing-nav-btn.automated {
-  border-bottom: 3px solid #fff;
-  border-right: 0;
+    border-bottom: 3px solid #fff;
+    border-right: 0;
   }
-  .wb-automated h1 {
-  text-align: center;
+  .landing .header h1 {
+    text-align: center;
+    font-size: 36px;
   }
   .product-testimonials .insight {
     width: 220px;
