--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -181,11 +181,23 @@ p.width-90 {
 .align-left {
   text-align: left;
 }
+p.indent-left {
+  padding-left: 30px;
+}
+p.indent-right {
+  padding-right: 30px;
+}
 .info-table th {
   background-color: #ececec;
 }
 .info-table-filter {
   padding: 10px 0;
+}
+ul.navigational li {
+  border-left: 1px solid #efefef;
+}
+ul.navigational li:first-of-type {
+  border-left: 0;
 }
 
 /* Header & Navigation */
@@ -977,6 +989,12 @@ ul.job-listings>li {
 .work-here-description {
   background-color: rgba(0,0,0,.7);
   color: #fff;
+}
+.terms h4 {
+  line-height: 140%;
+}
+.terms .term {
+  border-bottom: 1px dotted #ccc;
 }
 
 /* Footers */
