--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,6 +47,11 @@ p.width-90 {
   margin-left: auto;
   margin-right: auto;
 }
+.width-60 {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
 /*
 .caption h4 {
   font-size: 120%;
