--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,6 +52,11 @@ p.width-90 {
   margin-left: auto;
   margin-right: auto;
 }
+.width-40 {
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+}
 .bold {
   font-weight: 700;
 }
